introduce Db-class with table and column mapping